--- a/client/src/style.css
+++ b/client/src/style.css
@@ -6,7 +6,7 @@
 }
 
 .carusel {
-  min-height: 70vh;
+  min-height: 50vh;
   display: grid;
   place-items: center;
   font-family: "Ubuntu Mono", monospace;
@@ -17,11 +17,11 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  height: 500px;
+  height: 250px;
   gap: 5px;
 
   > dir {
-    flex: 0 0 120px;
+    flex: 0 0 150px;
     border-radius: 0.5rem;
     transition: 0.5s ease-in-out;
     cursor: pointer;
@@ -31,19 +31,19 @@
     
 
     &:nth-of-type(1) {
-      background: url("https://images.pexels.com/photos/1845208/pexels-photo-1845208.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260")
+      background: url("../images/1-std.png")
         no-repeat 50% / cover;
     }
     &:nth-of-type(2) {
-      background: url("https://images.pexels.com/photos/36469/woman-person-flowers-wreaths.jpg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260")
+      background: url("../images/3-breakup.png")
         no-repeat 50% / cover;
     }
     &:nth-of-type(3) {
-      background: url("https://images.pexels.com/photos/1468379/pexels-photo-1468379.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260")
+      background: url("../images/6-thanksgiving-invite.png")
         no-repeat 50% / cover;
     }
     &:nth-of-type(4) {
-      background: url("https://images.pexels.com/photos/247322/pexels-photo-247322.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260")
+      background: url("../images/7-second-family.png")
         no-repeat 50% / cover;
     }
 
